# VAI-Lab

./: .buildinfo  .gitignore  Inputs.py  Program.py  README.md  README.md.bak  Readme.md  canvas_input.py  contributing.html  crystal_design.xml  dev-environment.yml  development.html  environment.yml  genindex.html  ghn.txt  index.html  installation.html  intro.html  main.py  modules.html  mypy.ini  ngfjf.txt  objects.inv  pybullet.pyi  pyproject.toml  randomInputData.mat  randomInputData.py  run_UI.py  run_pipeline.py  search.html  searchindex.js  setup.py  sphinx-environment.yml  sphinx_requirements.txt  test 4.xml  test.xml  test2.xml  test3.xml  testing.xml  user_guide.html  (+15 more)
.github/workflows/: documentation.yml  pages.yml  pytest.yml  pytest_conda.yml  pythonpackage.yml  sphinx.yml
Data/: X_tr.csv  X_trst.csv  Y_tr.csv  Y_tst.csv
_sources/: development.md.txt  index.rst.txt  modules.rst.txt  user_guide.rst.txt  vai_lab.Core.rst.txt  vai_lab.Data.rst.txt  vai_lab.DataProcessing.rst.txt  vai_lab.DataStorage.rst.txt  vai_lab.DecisionMaking.rst.txt  vai_lab.GUI.rst.txt  vai_lab.InputData.rst.txt  vai_lab.Modelling.plugins.rst.txt  vai_lab.Modelling.rst.txt  vai_lab.UserInteraction.plugins.rst.txt  vai_lab.UserInteraction.rst.txt  vai_lab.rst.txt  vai_lab.utils.plugins.rst.txt  vai_lab.utils.rst.txt
aidesign/: __init__.py  _import_helper.py  _plugin_helpers.py  _plugin_template.py  _plugin_templates.py  _types.py
aidesign/Core/: AI_design_core.py  __init__.py
aidesign/Data/: Data_core.py  xml_handler.py
aidesign/DataProcessing/: DataProcessing_core.py  __init__.py  data_processing_plugin_template.py
aidesign/DataStorage/: DataStorage_core.py  __init__.py
aidesign/Environment/: Environment_core.py
aidesign/Environments/: Environments_core.py
aidesign/GUI/: GUI.py  GUI_core.py  User_Feedback_template.py  __init__.py
aidesign/InputData/: InputData_core.py
aidesign/Modelling/: Modelling_core.py  modelling_plugin_template.py
aidesign/Settings/: Data_core.py  Settings_core.py  __init__.py
aidesign/UserFeedback/: UserFeedback_core.py  User_Feedback_core.py  User_Feedback_template.py  __init__.py
aidesign/UserInteraction/: UserInteraction_core.py  User_Interaction_template.py
aidesign/examples/: X.csv
aidesign/modules/: UserInterfaceClass.py  __init__.py
aidesign/plugins/: __init__.py
aidesign/utils/: AID_core.py  UserInterfaceClass.py  __init__.py  import_helper.py  plugin_helpers.py  test.xml
docs/source/: api.rst  conf.py  contributing.rst  development.md  getting_started.rst  index.rst  installation.md  intro.md  modules.rst  readme.rst  user_guide.rst  vai_lab.Core.rst  vai_lab.Core.tests.rst  vai_lab.Data.rst  vai_lab.Data.tests.rst  vai_lab.DataProcessing.rst  vai_lab.DataProcessing.tests.rst  vai_lab.DataStorage.rst  vai_lab.DataStorage.tests.rst  vai_lab.DecisionMaking.rst  vai_lab.DecisionMaking.tests.rst  vai_lab.GUI.plugins.rst  vai_lab.GUI.rst  vai_lab.GUI.tests.rst  vai_lab.InputData.rst  vai_lab.InputData.tests.rst  (+11 more)
framework/: UserInterfaceClass.py
modules/: __init__.py
tests/: test_launch.py
(+530 files in other folders)
