
[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "vai_lab"
authors = [
    {name = "Chris McGreavy", email = "chris.mcgreavy@aalto.fi"},
    {name = "Carlos Sevilla Salcedo", email = "carlos.sevillasalcedo@aalto.fi"}
]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    'Programming Language :: Python :: 3.11'
]
requires-python = ">=3.11"
version = "0.0.dev4"
description = "AI assisted Virtual Laboratory framework."

dependencies = [
    "numpy >= 1.20.0",
    "pillow >= 9.0.0", # package name of PIL
    "pandas >= 1.4.0",
    "scikit-learn >= 0.0",
    "ttkwidgets >= 0.12.0",
    "matplotlib >= 3.5.0",
    "opencv-python >= 4.6.0.65",
    "pybullet >= 3.2.5",
    "attrs >= 23.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest >= 7.2.0",
    "pytest-cov >= 4.0.0"
]

[project.urls]
Source = "https://github.com/AaltoPML/VAI-lab"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"

[project.scripts]
vai_lab = "vai_lab.run_pipeline:main"