
[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "vai_lab"
authors = [
    {name = "Chris McGreavy", email = "chris.mcgreavy@aalto.fi"},
    {name = "Carlos Sevilla Salcedo", email = "carlos.sevillasalcedo@aalto.fi"}
]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    'Programming Language :: Python :: 3.11'
]
requires-python = ">=3.6"
version = "0.0.dev4"
description = "AI assisted Virtual Laboratory framework."

dependencies = [
]

[project.optional-dependencies]
dev = [
    "pytest >= 7.2.0",
    "pytest-cov >= 4.0.0"
]

[project.urls]
Source = "https://github.com/AaltoPML/VAI-lab"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"

[project.scripts]
vai_lab = "vai_lab.run_pipeline:main"